added data usage to config

--- a/config
+++ b/config
@@ -10,6 +10,11 @@
 separator=true
 separator_block_width=15
 
+[data_usage]
+label=DU: 
+command=/home/michel/bin/my-data-gb-month-usage
+interval=60
+
 [cpu_usage]
 label=C: 
 command=/home/michel/.config/i3blocks/cpu_usage/cpu_usage
